--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+    box-sizing: border-box;
+}
+
+:root {
+    --spacing: 8px;
+}
+
+
+.standard-button {
+    width: calc(var(--spacing)* 8);
+}
