added observable for kittenGallery monitoring + html added base app.components

--- a/src/app/list-kitten/app-list-kitten.component.html
+++ b/src/app/list-kitten/app-list-kitten.component.html
@@ -1,1 +1,9 @@
-<p>app-list-kitten</p>
+
+<!-- <div class="gallery" *ngIf="(context.data$ | async) as kittenGallery"> -->
+    <div class="gallery-card" *ngFor="let kitten of kittenGallery">
+        <h4>{{kitten.name}}</h4>
+        <p>{{kitten.breed}}</p>
+        <p>{{kitten.dob}}</p>
+        <img src="{{kitten.image}}">
+    </div>
+<!-- </div> -->
