--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,47 @@
     --spacing: 8px;
 }
 
-
 .standard-button {
     width: calc(var(--spacing)* 8);
+}
+
+.gallery-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 1rem;
+    border-width: 5px;
+    border-color: gray;
+    border-style: groove;
+
+    margin:2rem;
+}
+
+.cat-card {
+    border-width: 2px;
+    border-color: lightblue;
+    border-style: ridge;
+
+    width:20%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+    background-color: lightgray;
+    padding: 0.5rem;
+}
+
+.cat-card:hover {
+    transition: 1s ease-in-out;
+    transform: scale(1.3);
+    .detail{
+        display: block;
+    }
+}
+
+.detail{
+    display: none;
+}
+
+.cat-pic{
+    width:100%;
 }
