--- a/src/app/list-kitten/app-list-kitten.component.html
+++ b/src/app/list-kitten/app-list-kitten.component.html
@@ -6,7 +6,7 @@
         <p class="detail">{{kitten.breed}}</p>
         <p class="detail">{{kitten.dob}}</p>
         <img class="cat-pic" src="{{kitten.image}}">
-        <button (click)="adoptKitten(kitten)">Adopt {{kitten.name}}</button>
+        <button class="standard-button" (click)="adoptKitten(kitten)">Adopt {{kitten.name}}</button>
     </div>
 </div>
 
