--- a/src/app/user-kitten/app-user-kitten.component.html
+++ b/src/app/user-kitten/app-user-kitten.component.html
@@ -5,7 +5,7 @@
         <h4>{{kitten.name}}</h4>
         <p class="detail">{{kitten.breed}}</p>
         <p class="detail">{{kitten.dob}}</p>
-        <img class="cat-pic" src="{{kitten.image}}">
+        <img class="standard-button" class="cat-pic" src="{{kitten.image}}">
     </div>
 </div>
 
