--- a/src/app/user-kitten/app-user-kitten.component.html
+++ b/src/app/user-kitten/app-user-kitten.component.html
@@ -1,9 +1,12 @@
 <h4>All your adopted kittens!</h4>
 
-<div *ngIf="adoptedGallery.length ; else noKittenTemplate " class="gallery-container">
-    <div class="cat-card" *ngFor="let kitten of adoptedGallery">
-        <app-cat-card [singleCat]="kitten"></app-cat-card>
-    </div>
+<div *ngIf="adoptedGallery.length ; else noKittenTemplate" class="gallery-container">
+    <!-- <div class="cat-card" *ngFor="let kitten of adoptedGallery"> -->
+    <app-cat-card 
+        *ngFor="let kitten of adoptedGallery" 
+        [singleCat]="kitten">
+    </app-cat-card>
+    <!-- </div> -->
 </div>
 
 <ng-template #noKittenTemplate>
